k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-cart
  namespace: shopping-cart
  labels:
    app: shopping-cart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopping-cart

  template:
    metadata:
      labels:
        app: shopping-cart

    spec:
      containers:
        - name: shopping-cart
          image: swapnilbhiungade/shopping-cart:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
