k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-service
  namespace: shopping-cart

spec:
  selector:
    app: shopping-cart

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: NodePort
