k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-cart-ingress
  namespace: shopping-cart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: shopping.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-cart-service
                port:
                  number: 80
